--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "jspdf": "^2.5.2",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.11",
